--- a/liquidswap/gui/ui/windowpropose.ui
+++ b/liquidswap/gui/ui/windowpropose.ui
@@ -391,7 +391,7 @@
     <bool>false</bool>
    </property>
    <property name="text">
-    <string>Specify liquid.conf…</string>
+    <string>Specify elements.conf…</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+Shift+C</string>
@@ -402,7 +402,7 @@
     <bool>false</bool>
    </property>
    <property name="text">
-    <string>Liquid Node URL…</string>
+    <string>Elements Node URL…</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+Shift+U</string>
